--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="css/style.css" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+        <link rel="stylesheet"
+                href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
         <link rel="icon" type="image/png" href="images/icon.jpg" />
         <script src="js/main.js"></script>
 
@@ -14,59 +15,76 @@
 
 <body>
         <header>
-                <img class="header-logo_left" src="images/logo.png" alt="aici este logoul">
 
                 <div id="navbar" class="nav">
-                <a href="index.html"><img class="header-logo active" src="images/home.png" alt="Aici este logoul home"></a>
-                <a href="pages/page1.html"><img class="header-logo" src="images/page1.jpg"
-                                alt="Aici este logoul pagina 1"></a>
-                <a href="index.html"><img class="header-logo" src="images/page2.jpg"
-                                alt="Aici este logoul pagina 2"></a>
-                <a href="index.html"><img class="header-logo" src="images/page3.png"
-                                alt="Aici este logoul pagina 3"></a>
-               <!-- <a href="index.html"><img class="header-logo" src="images/page4.jpg"
-                                alt="Aici este logoul pagina 4"></a>
-                <a href="index.html"><img class="header-logo" src="images/page5.png"
-                                alt="Aici este logoul pagina 5"></a>
-                <a href="index.html"><img class="header-logo" src="images/page6.png"
-                                alt="Aici este logoul pagina 6"></a>
-                <a href="index.html"><img class="header-logo" src="images/page7.png"
-                                alt="Aici este logoul pagina 7"></a>
-                <a href="index.html"><img class="header-logo" src="images/page8.png"
-                                alt="Aici este logoul pagina 8"></a>
-                <a href="index.html"><img class="header-logo" src="images/page9.jpg"
-                                alt="Aici este logoul pagina 9"></a>
-                <a href="index.html"><img class="header-logo" src="images/page10.jpg"
-                                alt="Aici este logoul pagina 10"></a>
-                <img src="images/logo.png" class="header-logo_right" alt="aici este logoul">-->
-                <a class="hamburger-menu" onclick="mobileMenu()"><i class="fa fa-bars"></i></a>
-                <a href="pages/log.html"><img class="header-logo" src="images/login.jpg"
-                                alt="Aici este logoul login"></a>
-                        </div>
+                        <a href="https://www.sololearn.com/Courses/"> <img class="header-logo" src="images/logo.png"
+                                        alt="aici este logoul"></a>
+                        <a href="index.html"><img class="header-logo active" src="images/home.png"
+                                        alt="Aici este logoul home"></a>
+                        <a href="pages/page1.html"><img class="header-logo" src="images/page1.jpg"
+                                        alt="Aici este logoul pagina 1"></a>
+                        <a href="pages/page2.html"><img class="header-logo" src="images/q.png"
+                                        alt="Aici este logoul pagina 2"></a>
+                        <a href="pages/page3.html"><img class="header-logo" src="images/play.jpg"
+                                        alt="Aici este logoul pagina 3"></a>
+                        <a href="pages/log.html"><img class="header-logo" src="images/login.jpg"
+                                        alt="Aici este logoul login"></a>
+                        <a class="hamburger-menu" onclick="mobileMenu()"><img src="images/hamburger.png" height="20px"
+                                        alt="hamburger menu"></a>
+
+                </div>
         </header>
 
         <article>
-                <img src="images/53.png" class="article-img" alt="logoul html5">
-                <br />
-                <p text-align="left"><b><abbr title="Hyper Text Markup Language">HTML</abbr></b> este un limbaj de marcare utilizat pentru
-                        crearea paginilor web ce pot fi afișate într-un browser (sau navigator).
-                        Scopul HTML este mai degrabă prezentarea informațiilor – paragrafe, fonturi, tabele ș.a.m.d. –
-                        decât
-                        descrierea semanticii documentului. HTML este o formă de marcare orientată către prezentarea
-                        documentelor
-                        text pe o singura pagină, utilizând un software de redare specializat, numit agent utilizator
-                        HTML, cel mai
-                        bun exemplu de astfel de software fiind browserul web. </p>
-
+                <div class="row">
+                        <img src="images/53.png" class="article-img" alt="logoul html5">
+                        <br />
+                        <p>Bună ziua, acest sait este creat pentru studierea <abbr
+                                        title="Hyper Text Markup Language">HTML</abbr> și evaluarea cunoștințelor
+                                elevilor.
+                                Aceasta
+                                este pagina de start în ea se descrie conținutul și elementele saitului. Pentru a începe
+                                studierea
+                                limbajului tastați butonul <img src="images/page1.jpg" height="28"
+                                        alt="butonul cu cifra"> din header cu cifra 1. După fiecare lecție veți avea
+                                de răspuns la un set de întrebări
+                                (tastați butonul <img src="images/q.png" height="28" alt="butonul cu stea">cu steluță).
+                                Pentru a vizualiza tutoriale la temă tastați butonul <img src="images/play.jpg"
+                                        height="28" alt="butonul cu cifra">(cu numărul 2).
+                                În footer aveți Lincuri utile cu cursuri în programare și lincuri
+                                pentru a descarca aplicațiile necesare pentru a începe programarea. </p>
+                </div>
         </article>
 
         <footer>
-                <div class="centered">
-                        <span>Data</span>
-                        <span>2020</span>
-                </div>
+                <div class="row">
+                        <div class="col-4">
+                                <p>Lincuri utile</p>
+                                <a href="https://abcode.dev" target=”_blank”>Cursuri limbaje de programare Md</a><br />
+                                <a href="https://www.sololearn.com/Courses/" target=”_parent”> Cursuri
+                                        Sololearn</a><br />
+                                <a href="https://www.youtube.com/channel/UCajk1jidrqGwRacgq7rgi2Q/videos"
+                                        target=”_blank”>Limbajul C pentru
+                                        începători</a><br />
 
+                        </div>
+                        <div class="col-2">
+                                <h5>Data de astăzi: <span id="ziua"></span>/<span id="luna"></span>/<span
+                                                id="anul"></span></h5>
+                                <h5>Ora: <span id="ora"></span>:<span id="min"></span></h5>
+                        </div>
+                        <div class="col-4">
+                                <p>Descarca</p>
+                                <a href="https://code.visualstudio.com/Download" target=”_blank”> Visual Studio
+                                        Code</a><br />
+                                <a href="https://sourceforge.net/projects/notepadplusplus.mirror/files/"
+                                        target=”_blank”>Notepad++</a><br />
+                                <a href="https://sourceforge.net/projects/codeblocks/files/Binaries/"
+                                        target=”_blank”>Code blocks</a>
+                        </div>
+                </div>
         </footer>
+        <script src="js/main.js"></script>
 </body>
 
 </html>
