--- a/index.html
+++ b/index.html
@@ -29,6 +29,22 @@
                                         alt="Aici este logoul pagina 3"></a>
                         <a href="pages/log.html"><img class="header-logo" src="images/login.jpg"
                                         alt="Aici este logoul login"></a>
+                        <!-- <a href="index.html"><img class="header-logo" src="images/page4.jpg"
+                                alt="Aici este logoul pagina 4"></a>
+                <a href="index.html"><img class="header-logo" src="images/page5.png"
+                                alt="Aici este logoul pagina 5"></a>
+                <a href="index.html"><img class="header-logo" src="images/page6.png"
+                                alt="Aici este logoul pagina 6"></a>
+                <a href="index.html"><img class="header-logo" src="images/page7.png"
+                                alt="Aici este logoul pagina 7"></a>
+                <a href="index.html"><img class="header-logo" src="images/page8.png"
+                                alt="Aici este logoul pagina 8"></a>
+                <a href="index.html"><img class="header-logo" src="images/page9.jpg"
+                                alt="Aici este logoul pagina 9"></a>
+                <a href="index.html"><img class="header-logo" src="images/page10.jpg"
+                                alt="Aici este logoul pagina 10"></a>
+                <img src="images/logo.png" class="header-logo_right" alt="aici este logoul">-->
+
                         <a class="hamburger-menu" onclick="mobileMenu()"><img src="images/hamburger.png" height="20px"
                                         alt="hamburger menu"></a>
 
@@ -39,18 +55,14 @@
                 <div class="row">
                         <img src="images/53.png" class="article-img" alt="logoul html5">
                         <br />
-                        <p>Bună ziua, acest sait este creat pentru studierea <abbr
-                                        title="Hyper Text Markup Language">HTML</abbr> și evaluarea cunoștințelor
-                                elevilor.
+                        <p>Bună ziua, acest sait este creat pentru studierea HTML, și evaluarea cunoștințelor elevilor.
                                 Aceasta
                                 este pagina de start în ea se descrie conținutul și elementele saitului. Pentru a începe
                                 studierea
                                 limbajului tastați butonul <img src="images/page1.jpg" height="28"
-                                        alt="butonul cu cifra"> din header cu cifra 1. După fiecare lecție veți avea
+                                        alt="butonul cu cifra"> din header cu cifra (1-8). După fiecare lecție veți avea
                                 de răspuns la un set de întrebări
                                 (tastați butonul <img src="images/q.png" height="28" alt="butonul cu stea">cu steluță).
-                                Pentru a vizualiza tutoriale la temă tastați butonul <img src="images/play.jpg"
-                                        height="28" alt="butonul cu cifra">(cu numărul 2).
                                 În footer aveți Lincuri utile cu cursuri în programare și lincuri
                                 pentru a descarca aplicațiile necesare pentru a începe programarea. </p>
                 </div>
@@ -69,7 +81,7 @@
 
                         </div>
                         <div class="col-2">
-                                <h5>Data de astăzi: <span id="ziua"></span>/<span id="luna"></span>/<span
+                                <h5>Data de astăzi: <span id="data"></span>/<span id="luna"></span>/<span
                                                 id="anul"></span></h5>
                                 <h5>Ora: <span id="ora"></span>:<span id="min"></span></h5>
                         </div>
