--- a/pages/page3.html
+++ b/pages/page3.html
@@ -15,11 +15,13 @@
     <header>
 
         <div id="navbar" class="nav">
-            <a href="https://www.sololearn.com/Courses/"> <img class="header-logo" src="../images/logo.png" alt="aici este logoul"></a>
+            <a href="https://www.sololearn.com/Courses/"> <img class="header-logo" src="../images/logo.png"
+                    alt="aici este logoul"></a>
             <a href="../index.html"><img class="header-logo" src="../images/home.png" alt="Aici este logoul home"></a>
             <a href="page1.html"><img class="header-logo" src="../images/page1.jpg" alt="Aici este logoul pagina 1"></a>
             <a href="page2.html"><img class="header-logo" src="../images/q.png" alt="Aici este logoul pagina 2"></a>
-            <a href="page3.html"><img class="header-logo active" src="../images/play.jpg" alt="Aici este logoul pagina 3"></a>
+            <a href="page3.html"><img class="header-logo active" src="../images/play.jpg"
+                    alt="Aici este logoul pagina 3"></a>
             <a href="log.html"><img class="header-logo" src="../images/login.jpg" alt="Aici este logoul login"></a>
             <!--<a href="../index.html"><img class="header-logo" src="../images/page4.jpg" alt="Aici este logoul pagina 4"></a>
         <a href="../index.html"><img class="header-logo" src="../images/page5.png" alt="Aici este logoul pagina 5"></a>
@@ -30,28 +32,22 @@
         <a href="../index.html"><img class="header-logo" src="../images/page10.jpg"
                 alt="Aici este logoul pagina 10"></a>
         <img src="../images/logo.png" class="header-logo_right" alt="aici este logoul">-->
-            <a class="hamburger-menu" onclick="mobileMenu()"><img src="../images/hamburger.png" height="25px" alt="hamburger menu"></i>
-            </a>
+            <a class="hamburger-menu" onclick="mobileMenu()"><img src="../images/hamburger.png" height="25px"
+                    alt="hamburger menu"></i></a>
 
         </div>
     </header>
 
     <article>
         <div class="row">
-            <pre align="left"> 
-                <xmp class="bl"><!DOCTYPE html></xmp>
-                <html>
-                <head>
-                    Nu se afișează în pagină. Instrucțiuni p/u browser.
-                </head>
-                <body>
-                    Se afișează în pagină Contentul paginii.
-                </body>
-                </html>
 
-            </xmp>
-        </pre>
 
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/XAFR5BcUFyU" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/FPmjJO0STns" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
     </article>
 
@@ -73,7 +69,8 @@
             <div class="col-4">
                 <p>Descarca</p>
                 <a href="https://code.visualstudio.com/Download" target=”_blank”> Visual Studio Code</a><br />
-                <a href="https://sourceforge.net/projects/notepadplusplus.mirror/files/" target=”_blank”>Notepad++</a><br />
+                <a href="https://sourceforge.net/projects/notepadplusplus.mirror/files/"
+                    target=”_blank”>Notepad++</a><br />
                 <a href="https://sourceforge.net/projects/codeblocks/files/Binaries/" target=”_blank”>Code blocks</a>
             </div>
         </div>
