--- a/pages/log.html
+++ b/pages/log.html
@@ -15,12 +15,14 @@
     <header>
 
         <div id="navbar" class="nav">
-            <a href="https://www.sololearn.com/Courses/"> <img class="header-logo" src="../images/logo.png" alt="aici este logoul"></a>
+            <a href="https://www.sololearn.com/Courses/"> <img class="header-logo" src="../images/logo.png"
+                    alt="aici este logoul"></a>
             <a href="../index.html"><img class="header-logo" src="../images/home.png" alt="Aici este logoul home"></a>
             <a href="page1.html"><img class="header-logo" src="../images/page1.jpg" alt="Aici este logoul pagina 1"></a>
             <a href="page2.html"><img class="header-logo" src="../images/q.png" alt="Aici este logoul pagina 2"></a>
             <a href="page3.html"><img class="header-logo" src="../images/play.jpg" alt="Aici este logoul pagina 3"></a>
-            <a href="log.html"><img class="header-logo active" src="../images/login.jpg" alt="Aici este logoul login"></a>
+            <a href="log.html"><img class="header-logo active" src="../images/login.jpg"
+                    alt="Aici este logoul login"></a>
             <!--<a href="../index.html"><img class="header-logo" src="../images/page4.jpg" alt="Aici este logoul pagina 4"></a>
         <a href="../index.html"><img class="header-logo" src="../images/page5.png" alt="Aici este logoul pagina 5"></a>
         <a href="../index.html"><img class="header-logo" src="../images/page6.png" alt="Aici este logoul pagina 6"></a>
@@ -30,7 +32,8 @@
         <a href="../index.html"><img class="header-logo" src="../images/page10.jpg"
                 alt="Aici este logoul pagina 10"></a>
         <img src="../images/logo.png" class="header-logo_right" alt="aici este logoul">-->
-            <a class="hamburger-menu" onclick="mobileMenu()"><img src="../images/hamburger.png" height="25px" alt="hamburger menu"></a>
+            <a class="hamburger-menu" onclick="mobileMenu()"><img src="../images/hamburger.png" height="25px"
+                    alt="hamburger menu"></a>
 
         </div>
     </header>
@@ -44,18 +47,22 @@
                     <label for="nume">Numele:</label><br />
                     <input class="input-box" type="text" name="nume" id="nume" placeholder="Numele" required><br />
                     <label for="prenume">Prenumele:</label><br />
-                    <input class="input-box" type="text" name="prenume" id="prenume" placeholder="Prenumele" required><br />
+                    <input class="input-box" type="text" name="prenume" id="prenume" placeholder="Prenumele"
+                        required><br />
                     <label for="varsta">Vârsta:</label><br />
-                    <input class="input-box" type="number" min="10" max="110" name="varsta" id="varsta" placeholder="Vârsta 10-110" required><br /><br />
+                    <input class="input-box" type="number" min="10" max="110" name="varsta" id="varsta"
+                        placeholder="Vârsta 10-110" required><br /><br />
                     <label for="gen">Genul:</label><br />
                     <input type="radio" name="gen" value="feminin" id="gen" />Feminin<br />
                     <input type="radio" name="gen" value="masculin" id="gen" checked />Masculin<br /><br />
                     <label for="email">Email:</label><br />
-                    <input class="input-box" type="email" name="email" id="email" placeholder="@email.com" required><br />
+                    <input class="input-box" type="email" name="email" id="email" placeholder="@email.com"
+                        required><br />
                     <label for="login">Numele de utilizator:</label><br />
                     <input class="input-box" type="text" name="login" id="login" placeholder="Loghin" required><br />
                     <label for="parola">Parola:</label><br />
-                    <input class="input-box" type="password" name="parola" id="parola" placeholder="Minim 9 caractere" required><br /><br />
+                    <input class="input-box" type="password" name="parola" id="parola" placeholder="Minim 9 caractere"
+                        required><br /><br />
                     <input class="input-submit" type="reset" value="Sterge" />
                     <input class="input-submit" type="submit" value="Salveaza" />
                 </form>
@@ -67,9 +74,11 @@
                 <form>
                     <h2><b>Logare</b></h2>
                     <label for="email">Email:</label><br />
-                    <input class="input-box" type="email" name="email" id="email" placeholder="@email.com" required><br />
+                    <input class="input-box" type="email" name="email" id="email" placeholder="@email.com"
+                        required><br />
                     <label for="parola">Parola:</label><br />
-                    <input class="input-box" type="password" name="parola" id="parola" placeholder="Parola" required><br /><br />
+                    <input class="input-box" type="password" name="parola" id="parola" placeholder="Parola"
+                        required><br /><br />
                     <input class="input-submit" type="reset" value="Sterge" />
                     <input class="input-submit" type="submit" value="Logare" />
                 </form>
@@ -95,7 +104,8 @@
             <div class="col-4">
                 <p>Descarca</p>
                 <a href="https://code.visualstudio.com/Download" target=”_blank”> Visual Studio Code</a><br />
-                <a href="https://sourceforge.net/projects/notepadplusplus.mirror/files/" target=”_blank”>Notepad++</a><br />
+                <a href="https://sourceforge.net/projects/notepadplusplus.mirror/files/"
+                    target=”_blank”>Notepad++</a><br />
                 <a href="https://sourceforge.net/projects/codeblocks/files/Binaries/" target=”_blank”>Code blocks</a>
             </div>
         </div>
